# tiff-reducer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  Cargo.toml  DAGGER_MIGRATION.md  Dockerfile  Dockerfile.static  LICENSE  QWEN.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  build.rs  dagger.json  prompt.md  requirements-dev.txt
.cargo/: config.toml
.github/workflows/: ci-dagger.yml  ci.yml  release-dagger.yml  release.yml  test-dagger.yml  test.yml
.jules/: bolt.md  sentinel.md
.qwen/: PROJECT_SUMMARY.md
dagger/: README.md  go.mod  main.go  package-lock.json  package.json  tsconfig.json
dagger/ts/: index.ts
scripts/: build-release.sh  download_test_images.sh  run-tests.sh
src/: ffi.rs  main.rs  metadata.rs  quantize.rs
tests/: FAILED_TESTS_ANALYSIS.md  README.md  TEST_REPORT.md  fuzz_test.sh  generate-report.sh  generate_html_report.py  generate_report.rs  generate_test_report.py  integration_tests.rs  run_all_tests.sh  test_gdal.sh  test_visual_quality.py  test_visual_regression.sh
tests/images/: mask_lzw.tif
tests/report/thumbnails/: README.md  bali.tif_comp.png.aux.xml
