[package]
name = "tiff-reducer"
version = "0.3.1"
edition = "2021"
authors = ["Gautier Portet <kassoulet@gmail.com>"]
description = "High-performance TIFF optimizer using Zstd/LZMA with metadata preservation and GeoTIFF support."
license = "MIT"
repository = "https://github.com/kassoulet/tiff-reducer"
readme = "README.md"
keywords = ["tiff", "geotiff", "compression", "zstd", "optimization"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
rayon = "1.8"
libc = "0.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
num_cpus = "1.16"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"

[features]
default = ["vendored"]
# Build libtiff and dependencies from source for static linking
vendored = []
# Use system libraries instead of vendored sources
system = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
